Wrote out a game progression example of milestones. Built out job market object (not yet on screen), and coded auto-promotions as user works. Next steps: Prevent user from working/learning if not happy or health too low. Code auto-add buying things and seeing them update on screen. Build out job prerequisuites then learning - start with auto-learning and alert user needs to upskill. Auto code social leveling up / life events. Auto code new exercise skills. When basics are code, can start overlay template to replace auto level up.

--- a/files02/css/style.css
+++ b/files02/css/style.css
@@ -30,6 +30,21 @@ body {
   margin-top: 20px;
 }
 
+#jobDisplay {
+  position: absolute;
+  color: whitesmoke;
+  background-color: rgba(110, 98, 89,.7);
+  letter-spacing: 1.5px;
+  line-height: 500%;
+  border-radius: 10px;
+  top: 50px;
+  left: 50px;
+  font-size: 10px;
+  margin: 0px;
+  padding: 10px;
+  line-height: 80%;
+}
+
 #imgTopDiv {
   position: relative;
 }
@@ -173,7 +188,7 @@ body {
   font-weight: bold;
 }
 
-#day {
+#week {
   color: gray;
   font-size: 17px;
 }
